fix infinite loop from funders, fix generator

--- a/notebooks/draft parser.ipynb
+++ b/notebooks/draft parser.ipynb
@@ -138,9 +138,9 @@
     "                       \"name\": funders[i]\n",
     "                       },\n",
     "                      \"identifier\": fundidlist[i],\n",
-    "                      \"name\": \"\"\n",
     "            }\n",
     "            fundlist.append(fundict)\n",
+    "            i=i+1\n",
     "        fundflag = True\n",
     "    else:\n",
     "        fundlist = []\n",
@@ -156,6 +156,7 @@
     "\n",
     "\n",
     "def transform_resource_meta(metaobject):\n",
+    "    baseurl = \"http://www.imperial.ac.uk\"\n",
     "    tmpdict = {\n",
     "      \"@context\": {\n",
     "        \"schema\": \"http://schema.org/\",\n",
@@ -187,7 +188,7 @@
     "        datePublished = \"Not Available\"  \n",
     "    if \"data\" in basetype:\n",
     "        tmpdict['@type'] = \"Dataset\"\n",
-    "        tmpdict['dataDownload'] = {\n",
+    "        tmpdict['distribution'] = {\n",
     "            \"contentUrl\": url,\n",
     "            \"dateModified\": datePublished\n",
     "        }\n",
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +224,7 @@
     "    url_list = get_report_links(reports_url)\n",
     "    curatedBy = create_curationObject()\n",
     "\n",
-    "    for each_url in url_list[0:1]:\n",
+    "    for each_url in url_list[0:5]:\n",
     "        record_result = requests.get(each_url)\n",
     "        parsed_record = BeautifulSoup(record_result.text, \"html.parser\")\n",
     "        base_info = transform_pub_meta(parsed_record)\n",
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,10 +251,9 @@
     "    url = 'http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/covid-19-scientific-resources/'\n",
     "    response = requests.get(url)\n",
     "    parsedlisting = BeautifulSoup(response.text, \"html.parser\")\n",
-    "    baseurl = \"http://www.imperial.ac.uk/\"\n",
     "    resourceclass = parsedlisting.findAll(\"div\", {\"class\": \"media-item full light-secondary reverse equal-height\"})\n",
     "    resourcelist = []\n",
-    "    for eachblock in resourceclass[0:1]:\n",
+    "    for eachblock in resourceclass[0:5]:\n",
     "        tmpdict = transform_resource_meta(eachblock)\n",
     "        tmpdict[\"curatedBy\"] = curatedBy\n",
     "        yield(tmpdict)  "
@@ -261,18 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_analyses():\n",
+    "    baseurl = 'http://www.imperial.ac.uk'\n",
     "    curatedBy = create_curationObject()\n",
     "    analysislisturl = 'http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/covid-19-planning-tools/'\n",
     "    analysisresponse = requests.get(analysislisturl)\n",
     "    analysislisting = BeautifulSoup(analysisresponse.text, \"html.parser\")\n",
     "    analysisclass = analysislisting.findAll(\"div\", {\"class\": \"media-item full light-secondary reverse equal-height\"})\n",
     "\n",
-    "    for eachblock in analysisclass[0:1]:\n",
+    "    for eachblock in analysisclass[0:5]:\n",
     "        tmpdict = {\n",
     "          \"@context\": {\n",
     "            \"schema\": \"http://schema.org/\",\n",
@@ -304,54 +305,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_annotations():\n",
-    "    try:\n",
-    "        report_list = get_reports()\n",
-    "        for eachreport in report_list:\n",
-    "            yield(eachreport)\n",
-    "    except:\n",
-    "        print(\"no reports\")\n",
-    "    try:\n",
-    "        resource_list = get_resources()\n",
-    "        for eachresource in resource_list:\n",
-    "            yield(eachresource)\n",
-    "    except:\n",
-    "        print(\"no resources\")\n",
-    "    try:\n",
-    "        analyses_list = get_analyses()\n",
-    "        for eachanalysis in analyses_list:\n",
-    "            yield(eachanalysis)\n",
-    "    except:\n",
-    "        print(\"no analyses\")"
+    "    report_list = get_reports()\n",
+    "    yield from(report_list)\n",
+    "        \n",
+    "    resource_list = get_resources()\n",
+    "    yield from(resource_list)\n",
+    "        \n",
+    "    analyses_list = get_analyses()\n",
+    "    yield from(analyses_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'@context': {'schema': 'http://schema.org/', 'outbreak': 'https://discovery.biothings.io/view/outbreak/'}, '@type': 'Publication', 'journalName': 'Imperial College London', 'journalNameAbbreviation': 'imperialcollege', 'publicationType': 'Report', 'abstract': 'In a 13 week period, 41 outputs were published from a range of Imperial authors. From the groups of outputs defined: output type (Report, Preprint, Published Article, Code); non-peer reviewed and peer reviewed and open access status (CC-BY Gold, free access) a pattern can be seen. Between Week 1 – Week 5 the outputs were entirely Reports published CC-BY. As Reports continued to be released, they were joined by Preprints in Week 6 – Week 8, also published either Gold CC-BY or under a specific preprint server licence permitting free access. From Week 9, Published Articles in journals began to appear with a mix of Gold OA outputs and introducing free access to the set. In Week 12, Code emerges for the first time as an output. From the introduction of Preprints in Week 6 and Published Articles in Week 9 we can also see the types of articles being produced; Research outputs in the form of Preprints being first seen, followed by further Research and Editorial content following in Published Articles. Later in Week 12 we see the first emergence of ‘Other’ article types – clinical guidelines and clinical education outputs. The open access status of outputs seems largely linked to their output type. 100% of the outputs were freely available at the time of writing, but 29% (12 outputs) of them were not published with licenses that guarantee this in perpetuity. This 29% are all Published Articles in subscription journals that the publisher has made free to read. There are no reuse rights associated with this. All of the rest of the outputs- Reports, Preprints and Code are open access either by a CC-BY licence or the preprint server’s licence to host the article. Of the platforms disseminating these outputs, 34% are published by Imperial’s repository Spiral, with a following 27% published by other repositories and preprint servers. The remaining 39% are published by journal publishers, with Elsevier being the most frequent publisher of journals in this set.', 'name': '13 weeks in a pandemic: a descriptive study of Imperial College London’s COVID-19 publications', 'datePublished': '2020-04-16', 'url': 'http://spiral.imperial.ac.uk/bitstream/10044/1/77970/8/13%20weeks%20in%20a%20pandemic.pdf', 'identifier': 'icl_77970', 'license': '© 2020 Imperial College London. This is an open access report distributed under the terms of Creative Commons Attribution-Non Commercial License (CC BY-NC 4.0) (https://creativecommons.org/licenses/by-nc/4.0/).', 'doi': '10.25561/77970', '_id': 'icl_77970', 'curatedBy': {'@type': 'Organization', 'identifier': 'imperialcollege', 'url': 'http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/covid-19-reports/', 'name': 'MRC Centre for Global Infectious Disease Analysis', 'affiliation': ['Imperial College London'], 'curationDate': '2020-06-30'}, 'author': [{'@type': 'outbreak:Person', 'affiliation': [], 'name': 'Price, R', 'familyName': 'Price'}, {'@type': 'outbreak:Person', 'affiliation': [], 'name': 'Ozkan, Y', 'familyName': 'Ozkan'}]}\n",
-      "==================\n",
-      "{'@context': {'schema': 'http://schema.org/', 'outbreak': 'https://discovery.biothings.io/view/outbreak/'}, 'author': {'@type': 'Organization', 'name': 'Imperial College COVID-19 Response Team', 'affiliation': ['MRC Centre for Global Infectious Disease Analysis', 'Imperial College London']}, 'name': 'Code & Data (Lancet - Verity 30-03-2020)', 'description': 'Code & data for Lancet Infectious Diseases publication (30-03-2020) \"Estimates of the severity of coronavirus disease 2019:a model-based analysis\" (https://doi.org/10.1016/S1473-3099(20)30243-7) ', 'identifier': 'icl_cdflidpotsocd2ma', '_id': 'icl_cdflidpotsocd2ma', '@type': 'SoftwareSourceCode', 'downloadUrl': 'https://github.com/mrc-ide/COVID19_CFR_submission', 'datePublished': '2020-03-30', 'curatedBy': {'@type': 'Organization', 'identifier': 'imperialcollege', 'url': 'http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/covid-19-reports/', 'name': 'MRC Centre for Global Infectious Disease Analysis', 'affiliation': ['Imperial College London'], 'curationDate': '2020-06-30'}}\n",
-      "==================\n",
-      "{'@context': {'schema': 'http://schema.org/', 'outbreak': 'https://discovery.biothings.io/view/outbreak/'}, 'author': {'@type': 'Organization', 'name': 'Imperial College COVID-19 Response Team', 'affiliation': ['MRC Centre for Global Infectious Disease Analysis', 'Imperial College London']}, 'name': 'US state-level estimates', 'species': 'Homo sapiens', 'infectiousAgent': 'SARS-CoV-2', 'infectiousDisease': 'COVID-19', 'description': 'This tool provides state-level estimates of the number of COVID-19 infections, current rate of transmission,and the impact of changes in mobility on the rate of transmission in the absence of additional interventions for the United States.', 'identifier': 'icl_ttpseotnocicrottiocimotrotitaoaiftus', '_id': 'icl_ttpseotnocicrottiocimotrotitaoaiftus', 'curatedBy': {'@type': 'Organization', 'identifier': 'imperialcollege', 'url': 'http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/covid-19-reports/', 'name': 'MRC Centre for Global Infectious Disease Analysis', 'affiliation': ['Imperial College London'], 'curationDate': '2020-06-30'}, 'url': 'https://mrc-ide.github.io/covid19usa/#/', 'datePublished': 'Not Available'}\n",
-      "==================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_anns = load_annotations()\n",
     "for eachann in all_anns:\n",
-    "    print(eachann)\n",
-    "    print(\"==================\")"
+    "    with open('results/sample.json', 'a') as outwrite:\n",
+    "        json.dump(eachann,outwrite)\n",
+    "        outwrite.write(\",\")\n"
    ]
   },
   {
@@ -378,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
