--- a/notebooks/draft parser.ipynb
+++ b/notebooks/draft parser.ipynb
@@ -20,7 +20,7 @@
     "    'identifier': 'imperialcollege',\n",
     "    'url': 'http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/covid-19-reports/',\n",
     "    \"name\": \"MRC Centre for Global Infectious Disease Analysis\",\n",
-    "    \"affiliation\": [\"Imperial College London\"],\n",
+    "    \"affiliation\": [{\"name\":\"Imperial College London\"}],\n",
     "    \"curationDate\":now.strftime(\"%Y-%m-%d\")\n",
     "    }    \n",
     "    return(curatedBy)\n",
@@ -155,8 +155,8 @@
     "      \"author\": {\n",
     "        \"@type\": \"Organization\",\n",
     "        \"name\": 'Imperial College COVID-19 Response Team',\n",
-    "        \"affiliation\": [\"MRC Centre for Global Infectious Disease Analysis\",\n",
-    "                        \"Imperial College London\"]\n",
+    "        \"affiliation\": [{\"name\":\"MRC Centre for Global Infectious Disease Analysis\"},\n",
+    "                        {\"name\":\"Imperial College London\"}]\n",
     "      }\n",
     "    }\n",
     "    tmpdict['name'] = metaobject.find(\"h3\",{\"class\":\"title\"}).get_text()\n",
@@ -272,8 +272,8 @@
     "          \"author\": {\n",
     "            \"@type\": \"Organization\",\n",
     "            \"name\": 'Imperial College COVID-19 Response Team',\n",
-    "            \"affiliation\": [\"MRC Centre for Global Infectious Disease Analysis\",\n",
-    "                            \"Imperial College London\"]\n",
+    "            \"affiliation\": [{\"name\":\"MRC Centre for Global Infectious Disease Analysis\"},\n",
+    "                            {\"name\":\"Imperial College London\"}]\n",
     "          }\n",
     "        }\n",
     "        tmpdict['name'] = eachblock.find(\"h3\",{\"class\":\"title\"}).get_text()\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
