changed author to array of objects even if there's only one author object

--- a/notebooks/draft parser.ipynb
+++ b/notebooks/draft parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
     "    now = datetime.now()\n",
     "    curatedBy = {\n",
     "    \"@type\": \"Organization\",\n",
-    "    'identifier': 'imperialcollege',\n",
-    "    'url': 'http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/covid-19-reports/',\n",
+    "    \"identifier\": \"imperialcollege\",\n",
+    "    \"url\": \"http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/covid-19-reports/\",\n",
     "    \"name\": \"MRC Centre for Global Infectious Disease Analysis\",\n",
     "    \"affiliation\": [{\"name\":\"Imperial College London\"}],\n",
     "    \"curationDate\":now.strftime(\"%Y-%m-%d\")\n",
@@ -152,12 +152,12 @@
     "        \"schema\": \"http://schema.org/\",\n",
     "        \"outbreak\": \"https://discovery.biothings.io/view/outbreak/\"\n",
     "      },\n",
-    "      \"author\": {\n",
+    "      \"author\": [{\n",
     "        \"@type\": \"Organization\",\n",
     "        \"name\": 'Imperial College COVID-19 Response Team',\n",
     "        \"affiliation\": [{\"name\":\"MRC Centre for Global Infectious Disease Analysis\"},\n",
     "                        {\"name\":\"Imperial College London\"}]\n",
-    "      }\n",
+    "      }]\n",
     "    }\n",
     "    tmpdict['name'] = metaobject.find(\"h3\",{\"class\":\"title\"}).get_text()\n",
     "    tmpdict['description'] = metaobject.find(\"p\").get_text()\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,12 +269,12 @@
     "            \"schema\": \"http://schema.org/\",\n",
     "            \"outbreak\": \"https://discovery.biothings.io/view/outbreak/\"\n",
     "          },\n",
-    "          \"author\": {\n",
+    "          \"author\": [{\n",
     "            \"@type\": \"Organization\",\n",
     "            \"name\": 'Imperial College COVID-19 Response Team',\n",
     "            \"affiliation\": [{\"name\":\"MRC Centre for Global Infectious Disease Analysis\"},\n",
     "                            {\"name\":\"Imperial College London\"}]\n",
-    "          }\n",
+    "          }]\n",
     "        }\n",
     "        tmpdict['name'] = eachblock.find(\"h3\",{\"class\":\"title\"}).get_text()\n",
     "        tmpurl = eachblock.find(\"a\").get(\"href\") \n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
