--- a/notebooks/draft parser.ipynb
+++ b/notebooks/draft parser.ipynb
@@ -277,6 +277,7 @@
     "          }]\n",
     "        }\n",
     "        tmpdict['name'] = eachblock.find(\"h3\",{\"class\":\"title\"}).get_text()\n",
+    "        tmpdict['@type'] = 'Analysis'\n",
     "        tmpurl = eachblock.find(\"a\").get(\"href\") \n",
     "        tmpdict['species'] = \"Homo sapiens\"\n",
     "        tmpdict['infectiousAgent'] = \"SARS-CoV-2\"\n",
