add 'datePublished' to parser for Datasets

--- a/notebooks/draft parser.ipynb
+++ b/notebooks/draft parser.ipynb
@@ -178,6 +178,7 @@
     "        datePublished = \"Not Available\"  \n",
     "    if \"data\" in basetype:\n",
     "        tmpdict['@type'] = \"Dataset\"\n",
+    "        tmpdict['datePublished'] = datePublished\n",
     "        tmpdict['distribution'] = {\n",
     "            \"contentUrl\": url,\n",
     "            \"dateModified\": datePublished\n",
@@ -290,7 +291,7 @@
     "            tmpdict['url'] = tmpurl\n",
     "        else:\n",
     "            tmpdict['url'] = baseurl+tmpurl\n",
-    "        tmpdict['datePublished'] = 'Not Available'\n",
+    "        tmpdict['datePublished'] = '0000-00-00'\n",
     "        yield(tmpdict)"
    ]
   },
